--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ const steps = {
                        arr('aU','teal',450,454,550,156),
                        arr('a1','magenta',200,454,200,156)]},
   6:{spaces:true, els:[pt('u1',200,460,'u'), pt('au1',450,460,'α·u'),
-                       pt('Lau1',550,150,'L(α·u)'), pt('Lu1',200,150,'L(u)'),
+                       pt('Lau1',550,150,'α·L(u)'), pt('Lu1',200,150,'L(u)'),
                        arr('aH','teal',206,460,444,460),
                        arr('aU','teal',450,454,550,156),
                        arr('a1','magenta',200,454,200,156),
